@@ -1,15 +1,15 @@
 /****************************************************************************
  *
  * $Source: /usr/local/cvsroot/gccsdk/unixlib/source/signal/post.c,v $
- * $Date: 2005/04/04 12:01:15 $
- * $Revision: 1.23 $
+ * $Date: 2005/04/13 19:20:06 $
+ * $Revision: 1.24 $
  * $State: Exp $
- * $Author: peter $
+ * $Author: nick $
  *
  ***************************************************************************/
 
 #ifdef EMBED_RCSID
-static const char rcs_id[] = "$Id: post.c,v 1.23 2005/04/04 12:01:15 peter Exp $";
+static const char rcs_id[] = "$Id: post.c,v 1.24 2005/04/13 19:20:06 nick Exp $";
 #endif
 
 /* signal.c.post: Written by Nick Burrett, 27 August 1996.  */
@@ -248,7 +248,10 @@ __write_backtrace (int signo)
 	  else
 	    fputs("    [bad register dump address]\n", stderr);
 
-          pc = (unsigned int *)oldfp[17];
+	  if (__32bit)
+	    pc = (unsigned int *) (oldfp[17] & 0xfffffffc);
+	  else
+	    pc = (unsigned int *) (oldfp[17] & 0x03fffffc);
 
           /* Try LR if PC invalid */
           if (pc < (unsigned int *)0x8000  || !__valid_address(pc - 5, pc + 3))
@@ -263,7 +266,8 @@ __write_backtrace (int signo)
                   const char *ins;
                   int length;
 
-                  _swix(Debugger_Disassemble, _INR(0,1) | _OUTR(1,2), *diss, diss, &ins, &length);
+                  _swix (Debugger_Disassemble, _INR(0,1) | _OUTR(1,2),
+			 *diss, diss, &ins, &length);
 
                    fprintf(stderr, "\n    %08x    ", (unsigned int) diss);
                    fwrite(ins, length, 1, stderr);
